test/tests/compiler/17_supporting_dynamic_memory_allocation/invalid_types/extra_credit/prefix_incr_void.plx
#  Can't apply prefix ++/-- to void lvalue
extrn x: *any;

pub fn main(none) i32 {
    ++(x[])
    return false
}
